# Echo-bot

./: README.md  example.db  main.py  pyproject.toml
DB/PostgreSQL/: connect.py  create_table.py  insert.py
DB/SQLAlchemy/: sqlalchemy_core.py  sqlalchemy_session_1.py  sqlalchemy_session_2.py
DB/SQLite/: connect.py  create_table.py  insert.py
DB/mondodb/: mongoengine.py  pymongo.py
app/: handlers.py  keyboards.py
